--- a/src/styles.css
+++ b/src/styles.css
@@ -55,3 +55,52 @@ body{
 	color: white;
 	font-size: 2.5rem;
 }
+
+@media only screen and (min-width: 1024px) {
+
+}
+
+@media only screen and (min-width: 1441px) {
+body{
+	background-image: url("./space-objects1.jpg");
+}
+.calculator-grid{
+	grid-template-columns: repeat(4, 13rem);	
+	grid-template-rows: minmax(14rem, auto) repeat(5, 13rem);
+}
+.calculator-grid >button{
+	font-size: 2.5rem;
+}
+.output .previous-operand{
+	font-size: 2.5rem;
+}
+.output .current-operand{
+	font-size: 3rem;
+}
+	.calculator-grid{
+	margin-top: 50px;
+}
+}
+@media only screen and (max-width: 425px) {
+		.calculator-grid{
+	grid-template-columns: repeat(4, 5rem);	
+	grid-template-rows: minmax(6rem, auto) repeat(5, 5rem);
+}
+.calculator-grid >button{
+	font-size: 1.5rem;
+}
+.output .previous-operand{
+	font-size: 1.5rem;
+}
+.output .current-operand{
+	font-size: 2rem;
+}
+
+}
+@media only screen and (max-width: 375px) {
+	.calculator-grid{
+	grid-template-columns: repeat(4, 4rem);	
+	grid-template-rows: minmax(5rem, auto) repeat(5, 4rem);
+}
+
+	}
